--- a/terraform-live/galexywebappinfra/templates/alb.tf.j2
+++ b/terraform-live/galexywebappinfra/templates/alb.tf.j2
@@ -1,5 +1,5 @@
 data "aws_acm_certificate" "cert" {
-  domain   = "{{ aws_alb_cert_domain_name }}"
+  domain   = "{{ item_ans_tf_services.aws_alb_cert_domain_name }}"
   statuses = ["ISSUED"]
 }
 
